--- a/.github/workflows/front-service.yml
+++ b/.github/workflows/front-service.yml
@@ -49,31 +49,31 @@ jobs:
     - run: npm test
       working-directory: front-service
 
-  # docker:
-  #   needs: test
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
+  docker:
+     needs: test
+     runs-on: ubuntu-latest
+     steps:
+       - name: Checkout code
+         uses: actions/checkout@v3
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+       - name: Set up Docker Buildx
+         uses: docker/setup-buildx-action@v3
 
-  #     - name: Log in to Docker Hub
-  #       uses: docker/login-action@v3
-  #       with:
-  #         username: ${{ secrets.DOCKER_HUB_USERNAME }}
-  #         password: ${{ secrets.DOCKER_HUB_TOKEN }}
+       - name: Log in to Docker Hub
+         uses: docker/login-action@v3
+         with:
+           username: ${{ secrets.DOCKER_HUB_USERNAME }}
+           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-  #     - name: Build and push Docker image
-  #       uses: docker/build-push-action@v5
-  #       with:
-  #         context: ./front-service
-  #         file: ./front-service/Dockerfile
-  #         push: true
-  #         platforms: linux/amd64,linux/arm64
-  #         tags: |
-  #           marmevladek/devopsl-frontend:latest
+       - name: Build and push Docker image
+         uses: docker/build-push-action@v5
+         with:
+           context: ./front-service
+           file: ./front-service/Dockerfile
+           push: true
+           platforms: linux/amd64,linux/arm64
+           tags: |
+             marmevladek/devopsl-frontend:latest
 
   deploy:
     needs: test
